# SprigDB

./: CMakeLists.txt  README.md
docs/: data_struct.drawio.html
include/: struct.h
src/: CMakeLists.txt
src/data/: struct.c
tests/: CMakeLists.txt  hash_table_tests.c  hash_tests.c  test_struct.c
